--- a/templates/index.html
+++ b/templates/index.html
@@ -75,8 +75,10 @@
 
     {% if playlist_created %}
     <div class="success-message">
+        Playlist Link: <a href="{{ playlist_link }}">{{ playlist_link }}</a>
         Playlist '{{ playlist_name }}' created successfully.
     </div>
+
     {% endif %}
 </body>
 </html>
